--- a/index.html
+++ b/index.html
@@ -8,18 +8,10 @@
 <body>
 
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
-  Text Formatting in HTML
-  
-<h1>Text Formatting in HTML</h1>
+  <h1>Text Formatting in HTML</h1>
 
   <!-- Test 2: Wrap the subtitle below, 'A Love Story', in `h2` tags -->
-  A Love Story
-
-<h2>A Love Story</h2>
-
-<p>Hello World</p>
-
-<p>Hello Moon</p>
+  <h2>A Love Story</h2>
 
   <!-- Test 3: Wrap the heading below, 'Chapter 1', in `h3` tags -->
  <h3>Chapter One</h3>
@@ -33,7 +25,7 @@
   in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
-  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
   doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
   veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
   ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
@@ -44,7 +36,7 @@
   nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
   ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea
   voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem
-  eum fugiat quo voluptas nulla pariatur?
+  eum fugiat quo voluptas nulla pariatur?</p>
 
 
 </body>
